--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
+html {
+    background: #e3e3e3;
+}
 body {
     background-color: darkgray;
     font-family: 'Times New Roman', Times, serif;
     margin: 40px;
+    padding: 40px;
     border-top: 10px solid;
 h1 {
-
+    font-size: 3em;
+margin: 0;
 }
-
-
+p {
+    line-height: 1.4em;
+}
