--- a/style.css
+++ b/style.css
@@ -29,8 +29,10 @@ color: white;
 tr {
     display: flex;
     margin: 20px;
+    padding: 20px;
 }
 thead {
     display: flex;
     margin: 20px;
+    padding: 20px;
 }
