--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ color: white;
     float: left;
     margin-right: 20px;
 }
-tr {
+tbody {
     display: flex;
     margin: 20px;
     padding: 20px;
