--- a/style.css
+++ b/style.css
@@ -26,10 +26,13 @@ color: white;
     float: left;
     margin-right: 20px;
 }
-nav {
+ul {
     display: flex;
     font-size: x-large;
-    margin: 20px;
+    
+}
+li {
+margin: 20px;
     padding: 20px;
     background: darkgray;
 }
