--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ ul {
     
 }
 li {
-margin: 20px;
-    padding: 20px;
-    background: darkgray;
+margin: 50px;
+    padding: 50px;
+    background: rgb(34, 34, 34);
 }
