--- a/style.css
+++ b/style.css
@@ -37,3 +37,15 @@ margin: 50px;
     background: rgb(139, 124, 124);
     color: #e3e3e3;
 }
+a:nth-of-type(2){
+margin: 50px;
+    padding: 20px;
+    background: rgb(139, 124, 124);
+    color: #e02020;
+}
+a:nth-of-type(3){
+margin: 50px;
+    padding: 20px;
+    background: rgb(139, 124, 124);
+    color: #1e10e6;
+}
