--- a/style.css
+++ b/style.css
@@ -31,6 +31,9 @@ ul {
     font-size: x-large;
 }
 a {
+    position: sticky;
+    top:100px;
+    left: 50px;
 margin: 50px;
     padding: 20px;
     background: rgb(139, 124, 124);
