--- a/style.css
+++ b/style.css
@@ -32,13 +32,14 @@ ul {
 }
 nav{
 position: sticky;
-margin: 100;
+margin: 100px;
     top:100px;
     left: 50px;
     background: black;
 }
 a {
     color: #e3e3e3;
+    margin: 100px;
 }
 form{
     display: flex;
