--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ background-color: dimgray;
 }
 .blog-post{
 font-size: large;
-color: white;
+color: rgb(61, 61, 61);
 }
 .img-cont {
     background: grey;
