--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@ color: rgb(24, 24, 24);
     float: left;
     margin-right: 20px;
     text-align: center;
+    width: 50%;
+      margin: 0 auto;
 }
 ul {
     display: flex;
@@ -39,7 +41,8 @@ margin: 100px;
     top:100px;
     left: 50px;
     background: black;
-    text-align: center;
+      width: 50%;
+      margin: 0 auto;
 }
 a {
     color: #e3e3e3;
@@ -57,6 +60,8 @@ form{
 .list{
     padding: 30px;
     margin: 30px;
+    width: 50%;
+      margin: 0 auto;
 }
 h3{
     font-size: xx-large;
