--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ color: rgb(24, 24, 24);
     background: grey;
     float: left;
     margin-right: 20px;
+    padding: 20px;
     text-align: center;
       margin: 0 auto;
 }
