i think i already tried this

--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ margin: 100px;
     background: black;
       width: 50%;
       margin: 0 auto;
+      text-align: center;
 }
 a {
     color: #e3e3e3;
