--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     margin: 40px;
     padding: 40px;
     border-top: 30px solid;
-h1 {
+header h1 {
     text-align: center;
     font-size: 3em;
 margin: 0;
@@ -33,6 +33,7 @@ color: rgb(24, 24, 24);
 img{
    display: block;
   margin: auto;
+  max-width: 100%;
 }
 ul {
     display: flex;
@@ -40,6 +41,8 @@ ul {
 }
 li{
     text-align: center;
+    display: inline-block;
+    padding: 10px 20px;
 }
 nav{
 position: sticky;
