--- a/style.css
+++ b/style.css
@@ -79,6 +79,11 @@ table{
 }
 @media screen and (min-width: 600px){
     form{
-        display: block;
+        display: flex;
+    }
+}
+@media screen and (max-wdith: 1200px){
+    header {
+        background: #465362;
     }
 }
