--- a/style.css
+++ b/style.css
@@ -84,6 +84,6 @@ table{
 }
 @media screen and (max-width: 1200px){
     header {
-        background: #465362;
+        background: #ececec;
     }
 }
