--- a/style.css
+++ b/style.css
@@ -83,9 +83,11 @@ header{
 }
 th{
 display: flex;
+padding: 20px;
 }
 tr{
 display: flex;
+padding: 20px;
 }
 
 @media screen and (min-width: 600px){
