--- a/style.css
+++ b/style.css
@@ -30,6 +30,9 @@ color: rgb(24, 24, 24);
     text-align: center;
       margin: 0 auto;
 }
+#nav {
+    width: 50%;
+}
 img{
    display: block;
   margin: auto;
