--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ color: rgb(24, 24, 24);
 #nav {
     width: 50%;
     text-align: center;
+    margin: 0 auto;
+    border: 1px solid black;
 }
 img{
    display: block;
