--- a/style.css
+++ b/style.css
@@ -66,8 +66,12 @@ a {
 }
 form{
     display: flex;
-    text-align:center;
-    margin: 0 auto;
+    .parent-container {
+  display: flex;
+  justify-content: center; 
+  align-items: center;   
+  height: 100vh;
+}
 }
 #list{
     display:flex;
