--- a/style.css
+++ b/style.css
@@ -103,12 +103,12 @@ padding: 20px;
     }
 }
 @media (max-width: 767px) {
-     body {
+     p {
         font-size: 14px;
       }
     }
 @media (min-width: 768px) {
-     body {
+     p {
             font-size: 16px;
         }
     }
